--- a/1introduction.tex
+++ b/1introduction.tex
@@ -12,7 +12,7 @@ All of these retrieval engine technologies have one thing in common, that is, th
 
 However, as mentioned, this approach can not be directly applied towards surveillance video footage as the metadata such as title, description or even tags does not exist most of the time. Looking from the surveillance video footage standpoint, traditionally, the process of finding a particular video from a huge collection is done manually. This process involves an inquirer/user who is looking for a particular scene or shot, and an person-in-charge who manages the CCTV video collection. Now, bringing that into the scope of this work, which is a car park scenario, the inquirer would typically need to provide information such as time, date, colour of the vehicle, vehicle registration number, and place of which an incident occurred. %In this work, these information are examples of what would be referred to as semantics. 
 
-Next, the person-in-charge would have to sift through hours and hours of video in order to find a distinct video shot that matches the given semantics. This process is undeniably time consuming, laborious, monotonous and tedious. While the task is potentially simpler and straightforward when there is only one intended video shot with clear-cut definitive time and date given, this process takes an enormous effort when the time and date is not given, or even in cases when all the video shots with similar properties are desired. Evidently, there exist a gap which can be addressed using a well designed semantic extraction and retrieval engine in which this work would attempt to address.
+Next, the person-in-charge would have to sift through hours and hours of video in order to find a distinct video shot that matches the given semantics. This reactive approach towards incident is undeniably slow, time consuming, laborious, monotonous and tedious. While the task is potentially simpler and straightforward when there is only one intended video shot with clear-cut definitive time and date given, this process takes an enormous effort when the time and date is not given, or even in cases when all the video shots with similar properties are desired. Evidently, there exist a gap which can be addressed using a proactive approach via a well designed semantic extraction and retrieval engine which this work attempts to address.
 
 \section{Motivation, Problem Statements and Research Questions}
 
