--- a/4vehicle-semantics-extraction.tex
+++ b/4vehicle-semantics-extraction.tex
@@ -943,7 +943,7 @@ With the intention of extracting motion information from the input video data, t
 
 \begin{equation}
 \label{eq:centroid}
-(Centroid_x, Centroid_y) = (\frac{BB_{x}+BB_{x}+BB_{width}}{2} , \frac{BB_{y}+BB_{y}+BB_{height}}{2})
+(Centroid_x, Centroid_y) = (\frac{BB_{x}+BB_{width}}{2} , \frac{BB_{y}+BB_{height}}{2})
 \end{equation}
 \vspace{-2em}
 \begin{align*}
