--- a/llt.bib
+++ b/llt.bib
@@ -727,5 +727,7 @@ year = {2013}
 }
 
 
-@misc{riemersma, title={Colour metric}, url={https://www.compuphase.com/cmetric.htm}, journal={Axonometric projections - a technical overview}, author={Riemersma, Thiadmer}}
-A low-cost approximation of L*U*V using RGB values
+@article{riemersma, 
+title={Colour metric}, 
+author={Riemersma, Thiadmer},
+journal={Colour metric: https://www.compuphase.com/cmetric.htm},   year={2018}} 
