--- a/thesis.tex
+++ b/thesis.tex
@@ -13,6 +13,7 @@
 \usepackage{siunitx}
 
 
+
 \usepackage[x11names,dvipsnames,svgnames]{xcolor}
 \usepackage[os=win]{menukeys}
 \usepackage{listings}
@@ -57,8 +58,8 @@ breaklines=true,breakatwhitespace=true}
 \newcommand{\versionOneExt}{LSH-Inspired Semantic Extraction }
 \newcommand{\versionTwoExt}{Chamfer Distance-Inspired Semantic Extraction }
 
-\newcommand{\versionOneRet}{LSH-Inspired Retrieval Engine }
-\newcommand{\versionTwoRet}{Chamfer Distance based Retrieval Engine  }
+\newcommand{\versionOneRet}{LSH-Inspired Retrieval Technique }
+\newcommand{\versionTwoRet}{Chamfer Distance based Retrieval Technique  }
 
 
 
@@ -99,9 +100,9 @@ breaklines=true,breakatwhitespace=true}
 
 
 \author{Clarence Cheong Weihan}
-\title{Extraction and Retrieval of Object Semantics for Long-Term Car Park Surveillance Videos }
-\submissionyear{2018}
-\submissionmonth{August}
+\title{Extraction and Retrieval of Vehicle Semantics for Long-Term Car Park Videos }
+\submissionyear{2019}
+\submissionmonth{May}
 \faculty{Faculty of Computing and Informatics}
 \degree{Master~of~Science (Information~Technology)}
 \qualification{B.Eng.~(Hons), Multimedia University, Malaysia\\%
@@ -118,9 +119,9 @@ breaklines=true,breakatwhitespace=true}
 \declarationpage
 
 \acknowledgements{
-Firstly, I would like to thank my wife, Jocelyn for encouraging me to take on this seemingly "less traveled road". Her unceasing support and understanding throughout this journey is precious and much appreciated. 
+Firstly, I would like to thank my wife, Jocelyn for encouraging me to take on this seemingly "less travelled road". Her unceasing support and understanding throughout this journey is precious and much appreciated. 
 
-Undeniably, this journey would not be possible without the advices, ideas and guidance provided by my supervisors, Dr. John See as well as Dr. Wong Lai Kuan. Their input certainly has sparked ideas which has been materialized in this work. Thanks you, I owe you many.
+Undeniably, this journey would not be possible without the advises, ideas and guidance provided by my supervisors, Dr. John See as well as Dr. Wong Lai Kuan. Their input certainly has sparked ideas which has been materialised in this work. Thanks you, I owe you many.
 
 Not forgetting my family and friends who supported me on this journey. My fellow church members who were encouraging me throughout my masters. Thanks a lot! 
 
